fixed extra padding at the bottom

--- a/static/css/user.css
+++ b/static/css/user.css
@@ -9,7 +9,6 @@
     display: flex;
     justify-content: space-between;
     width: 100%; 
-    margin-bottom: 40px;
   }
   
   .icon-bar a {
@@ -93,4 +92,7 @@
   }
 .fullIconBar{
   box-shadow: 10px 0 10px -1px #00000030;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
 }
